<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
		
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/sp_touchmode_prompt"
			/>
		<Spinner
			android:id="@+id/sp_touchmode"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:prompt="@string/sp_touchmode_prompt"
			/>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/sp_rotation_prompt"
			/>
		<Spinner
			android:id="@+id/sp_rotation"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:prompt="@string/sp_rotation_prompt"
			/>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/continueplaying"
			/>
		<Spinner
			android:id="@+id/sp_continue"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:prompt="@string/continueplaying"
			/>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/compdifficulty"
			/>
		<Spinner
			android:id="@+id/sp_compdifficulty"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:prompt="@string/compdifficulty"
			/>
		<!-- <TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/pickcolortext"
			/>
		<Button
			android:id="@+id/pickbkgndcolor"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/pickcolorbtn"
			/> -->
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/reset_all_settings"
			/>
		<Button
			android:id="@+id/resetoptions"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/reset_all_button"
			/>
		
	</LinearLayout>

</ScrollView>
